--- a/html/content/news.html
+++ b/html/content/news.html
@@ -26,7 +26,9 @@
                         <span class="icon-angle-right active_on"></span>
                     </span>
                 </div>
-                <div class="left_container_content"></div>
+                <div class="left_container_content">
+                    <div class="video"></div>
+                </div>
             </div>
         </div>
         <div class="news_right">
