--- a/html/content/news.html
+++ b/html/content/news.html
@@ -1,16 +1,23 @@
+<div style="height: 60px;width: 100%;"></div>
 <div class="news_container">
     <div class="news_info">
         <div class="news_left">
-            <div class="page_link_container"></div>
+            <div class="page_link_container">
+                <div class="swiper-container" style="width: 100%;height: 100%;margin: 0px;">
+                    <div class="swiper-wrapper">
+
+                    </div>
+                </div>
+            </div>
             <div class="blank_15px"></div>
             <div class="bg_color_2b img_container">
                 <div class="left_container_title">
                     <span style="float: left;">照片</span>
-                    <span style="float: right;">
-                        <span class="icon-angle-left active_off"></span>
-                        <span>&nbsp;</span>
-                        <span class="icon-angle-right active_on"></span>
-                    </span>
+                    <!--<span style="float: right;">-->
+                        <!--<span class="icon-angle-left active_off"></span>-->
+                        <!--<span>&nbsp;</span>-->
+                        <!--<span class="icon-angle-right active_on"></span>-->
+                    <!--</span>-->
                 </div>
                 <div class="left_container_content">
                     <div class="pic"></div>
@@ -20,11 +27,11 @@
             <div class="bg_color_2b video_container">
                 <div class="left_container_title">
                     <span style="float: left;">视频</span>
-                    <span style="float: right;">
-                        <span class="icon-angle-left active_on"></span>
-                        <span>&nbsp;</span>
-                        <span class="icon-angle-right active_on"></span>
-                    </span>
+                    <!--<span style="float: right;">-->
+                        <!--<span class="icon-angle-left active_on"></span>-->
+                        <!--<span>&nbsp;</span>-->
+                        <!--<span class="icon-angle-right active_on"></span>-->
+                    <!--</span>-->
                 </div>
                 <div class="left_container_content">
                     <div class="video"></div>
