--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 <div id="content"></div>
 <div id="product"></div>
 <div id="news"></div>
+<div id="check"></div>
 <div id="foot"></div>
 <script src="_assets/js/plugins.js"></script>
 <script>
     var maplaodTimer = null;
-    var indexFn=null;
+    var indexFn = null;
+    var lng, lat = null;
     function pageInit() {
         var spinkit = SpinKit.Create({
             color: '#fff'
@@ -43,17 +45,17 @@
             $(function () {
                 spinkit.remove();
                 index.init();
-                indexFn=index;
+                indexFn = index;
             });
         });
     }
     function mapinit() {
         clearInterval(maplaodTimer);
         maplaodTimer = setInterval(function () {
-            if ($('#link_map_content').length > 0) {
+            if ($('#link_map_content').length > 0 && lng != null && lat != null) {
                 clearInterval(maplaodTimer);
                 maplaodTimer = null;
-                indexFn.mapinit();
+                indexFn.mapinit(lng,lat);
             }
         }, 500);
     }
